# gravel

./: .gitignore  .rustfmt.toml  Cargo.toml  Makefile.toml  README.md  config.yml  deps
.dev-config/: .gitignore
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: lint.yml  publish.yml
gravel/: Cargo.toml  config.yml
gravel-core/: Cargo.toml
gravel-core/src/: config.rs  engine.rs  environment.rs  frontend.rs  lib.rs  paths.rs  performance.rs  plugin.rs  provider.rs  scoring.rs
gravel-core/src/hotkeys/: mod.rs  parsing.rs  structs.rs
gravel-frontend-default/: Cargo.toml  config.yml
gravel-frontend-default/src/: builder.rs  config.rs  constants.rs  implementation.rs  lib.rs  scroll.rs  scrollbar.rs  structs.rs
gravel-frontend-default/src/native/: linux.rs  windows.rs
gravel-frontend-fltk/: Cargo.toml  config.yml
gravel-frontend-fltk/src/: builder.rs  config.rs  implementation.rs  lib.rs  scroll.rs  scrollbar.rs  structs.rs
gravel-frontend-fltk/src/native/: linux.rs
gravel-provider-calculator/: Cargo.toml  config.yml
gravel-provider-calculator/src/: lib.rs
gravel-provider-exec/: Cargo.toml  config.yml
gravel-provider-exec/src/: lib.rs  linux.rs  windows.rs
gravel-provider-kill/: Cargo.toml  config.yml
gravel-provider-kill/src/: lib.rs  linux.rs  windows.rs
gravel-provider-program/: Cargo.toml  config.yml
gravel-provider-program/src/: lib.rs  linux.rs  windows.rs
gravel-provider-system/: Cargo.toml  config.yml
gravel-provider-system/src/: lib.rs  linux.rs  windows.rs
gravel-provider-websearch/: Cargo.toml  config.yml
gravel-provider-websearch/src/: lib.rs  linux.rs  windows.rs
gravel-util/: Cargo.toml
gravel-util/src/: lib.rs
gravel-util/src/hotkeys/: parsing.rs  structs.rs
gravel-util/src/process/: linux.rs  windows.rs
gravel/config/: default.yml
gravel/src/: config.rs  main.rs
gravel/src/init/: cli.rs  config.rs  engine.rs  frontend.rs  hotkeys.rs  logging.rs  mod.rs  plugins.rs  single_instance.rs  windows_console.rs
package/: .gitignore  PKGBUILD  gravel.desktop  package.sh
package/arch/: PKGBUILD
package/debian/: build.sh  control
