[workspace.package]
version = "0.0.0-dev" # patched by CI
edition = "2021"

[workspace]
resolver = "2"

members = [
	"gravel",
	"gravel-core",
	"gravel-frontend-fltk",
	"gravel-provider-calculator",
	"gravel-provider-kill",
	"gravel-provider-program",
	"gravel-provider-system",
	"gravel-provider-websearch",
]

[workspace.dependencies]
anyhow = "1.0.75"
arboard = "3.2.1"
clap = "4.4.12"
color-eyre = "0.6.2"
config = "0.14.0"
enumflags2 = "0.7.8"
fltk = "1.4.24"
freedesktop_entry_parser = "1.3.0"
fuzzy-matcher = "0.3.7"
glob = "0.3.1"
hotkey = "0.3.1"
itertools = "0.12.0"
lazy_static = "1.4.0"
log = "0.4.19"
mexprp = { version = "0.3.1", default-features = false }
nix = "0.27.1"
open = "5.0.1"
procfs = "0.16.0"
rstest = "0.18.2"
serde = "1.0.188"
shellexpand = "3.1.0"
single-instance = "0.3.3"
stderrlog = "0.6.0"
sysinfo = "0.30.5"
system_shutdown = "4.0.1"
thiserror = "1.0.56"
urlencoding = "2.1.3"
winapi = "0.3.9"

[profile.release]
strip = true
lto = true

# improve debug backtrace performance with color-eyre
[profile.dev.package.backtrace]
opt-level = 3
