[workspace.package]
version = "0.0.0-dev" # patched by CI
edition = "2021"

[workspace]
resolver = "2"

members = [
	"gravel",
	"gravel-core",
	"gravel-frontend-fltk",
	"gravel-provider-calculator",
	"gravel-provider-kill",
	"gravel-provider-program",
	"gravel-provider-system",
	"gravel-provider-websearch",
]

[workspace.dependencies]
anyhow = "1.0.79"
arboard = "3.3.1"
clap = "4.5.1"
color-eyre = "0.6.2"
enumflags2 = "0.7.9"
fltk = "1.4.24"
freedesktop_entry_parser = "1.3.0"
fuzzy-matcher = "0.3.7"
glob = "0.3.1"
hotkey = "0.3.1"
itertools = "0.12.1"
lazy_static = "1.4.0"
log = "0.4.20"
mexprp = { version = "0.3.1", default-features = false }
nix = "0.27.1"
open = "5.0.1"
procfs = "0.16.0"
rstest = "0.18.2"
serde = { version = "1.0.196", features = ["derive"] }
shellexpand = "3.1.0"
single-instance = "0.3.3"
stderrlog = "0.6.0"
sysinfo = "0.30.5"
system_shutdown = "4.0.1"
thiserror = "1.0.57"
urlencoding = "2.1.3"
winapi = "0.3.9"

# target fork until https://github.com/SergioBenitez/Figment/issues/92 is closed
figment = { git = "https://github.com/thorio/figment", branch = "master" }

[profile.release]
strip = true
lto = true

# improve debug backtrace performance with color-eyre
[profile.dev.package.backtrace]
opt-level = 3
