[package]
name = "gravel-core"
version.workspace = true
edition.workspace = true

[dependencies]
config.workspace = true
enumflags2.workspace = true
fuzzy-matcher.workspace = true
hotkey.workspace = true
itertools.workspace = true
lazy_static.workspace = true
log.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
rstest.workspace = true
