[package]
name = "gravel-frontend-fltk"
version = "0.0.0"
edition = "2021"

[dependencies]
gravel-core = { path = "../gravel-core" }

fltk = { version = "^1.4", features = ["fltk-bundled"] }
lazy_static.workspace = true
log.workspace = true
serde.workspace = true

[target.'cfg(windows)'.dependencies]
winapi.workspace = true
