[package]
name = "gravel-frontend-fltk"
version.workspace = true
edition.workspace = true

[dependencies]
gravel-core = { path = "../gravel-core" }

fltk = { workspace = true, features = ["fltk-bundled"] }
lazy_static.workspace = true
log.workspace = true
serde.workspace = true

[target.'cfg(windows)'.dependencies]
winapi.workspace = true
