[package]
name = "gravel-provider-kill"
version = "0.0.0"
edition = "2021"

[dependencies]
gravel-core = { path = "../gravel-core" }

anyhow.workspace = true
itertools.workspace = true
serde.workspace = true

[target.'cfg(windows)'.dependencies]
sysinfo = "0.29.10"
winapi.workspace = true

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27.1", features = ["process", "signal"] }
procfs = "0.15.1"
