[package]
name = "gravel-provider-program"
version = "0.0.0"
edition = "2021"

[dependencies]
gravel-core = { path = "../gravel-core" }

glob = "0.3.1"
itertools.workspace = true
log.workspace = true
serde.workspace = true
shellexpand.workspace = true

[target.'cfg(unix)'.dependencies]
freedesktop_entry_parser = "1.3.0"
