[package]
name = "gravel-provider-program"
version.workspace = true
edition.workspace = true

[dependencies]
gravel-core = { path = "../gravel-core" }

glob.workspace = true
itertools.workspace = true
log.workspace = true
serde.workspace = true
shellexpand.workspace = true

[target.'cfg(unix)'.dependencies]
freedesktop_entry_parser.workspace = true
