[package]
name = "gravel-provider-system"
version = "0.0.0"
edition = "2021"

[dependencies]
gravel-core = { path = "../gravel-core" }

anyhow.workspace = true
serde.workspace = true
log.workspace = true

[target.'cfg(windows)'.dependencies]
winapi = { workspace = true, features = ["powrprof"] }
system_shutdown = "4.0.1"
