[package]
name = "gravel-provider-system"
version.workspace = true
edition.workspace = true

[dependencies]
gravel-core = { path = "../gravel-core" }

anyhow.workspace = true
log.workspace = true
serde.workspace = true

[target.'cfg(windows)'.dependencies]
winapi = { workspace = true, features = ["powrprof"] }
system_shutdown.workspace = true
