[package]
name = "gravel"
version = "0.1.0"
edition = "2021"

[dependencies]
gravel-core = { path = "../gravel-core" }
gravel-frontend-default = { path = "../gravel-frontend-default" }
gravel-provider-calculator = { path = "../gravel-provider-calculator" }
gravel-provider-kill = { path = "../gravel-provider-kill" }
gravel-provider-program = { path = "../gravel-provider-program" }
gravel-provider-system = { path = "../gravel-provider-system" }
gravel-provider-websearch = { path = "../gravel-provider-websearch" }

config = "0.13.2"
lazy_static = "1.4.0"
shellexpand = "3.1.0"
single-instance = "0.3.3"
