[package]
name = "gravel"
version.workspace = true
edition.workspace = true
description = "cross-platform run launcher"
readme = "../README.md"
license = "GPL-3"
authors = ["thorou"]
repository = "https://github.com/thorio/gravel"

[package.metadata.deb]
maintainer = "thorou <thorou@chirality.de>"
section = "x11"
priority = "extra"
depends = [
	# FLTK dependencies
	"libx11-6",
	"libxinerama1",
	"libxft2",
	"libxext6",
	"libxcursor1",
	"libxrender1",
	"libxfixes3",
	"libcairo2",
	"libpango-1.0-0",
	"libpangocairo-1.0-0",
	"libpangoxft-1.0-0",
	"libglib2.0-0",
	"libfontconfig1",
	"libglu1-mesa",
	"libgl1",
	# provider dependencies
	"coreutils", # env
	"bash",
	"libgtk-3-bin", # gtk-launch
	"xdg-utils", # xdg-open
]

[package.metadata.arch]
maintainer = "thorou <thorou@chirality.de>"
depends = [
	# FLTK dependencies
	"libx11",
	"libxext",
	"libxft",
	"libxinerama",
	"libxcursor",
	"libxrender",
	"libxfixes",
	"pango",
	"cairo",
	"libgl",
	"mesa",
	# provider dependencies
	"coreutils", # env
	"bash",
	"gtk3", # gtk-launch
	"xdg-utils", # xdg-open
]

[dependencies]
gravel-core = { path = "../gravel-core" }
gravel-frontend-fltk = { path = "../gravel-frontend-fltk" }
gravel-provider-calculator = { path = "../gravel-provider-calculator" }
gravel-provider-kill = { path = "../gravel-provider-kill" }
gravel-provider-program = { path = "../gravel-provider-program" }
gravel-provider-system = { path = "../gravel-provider-system" }
gravel-provider-websearch = { path = "../gravel-provider-websearch" }

clap = { workspace = true, features = ["derive"] }
color-eyre.workspace = true
figment = { workspace = true, features = ["yaml"] }
lazy_static.workspace = true
log.workspace = true
shellexpand.workspace = true
single-instance.workspace = true
stderrlog.workspace = true

[target.'cfg(windows)'.dependencies]
winapi = { workspace = true, features = ["wincon"] }
