[package]
name = "gravel"
version.workspace = true
edition.workspace = true
description = "cross-platform run launcher"
readme = "../README.md"
license = "GPL-3"
authors = ["thorou"]
repository = "https://github.com/thorio/gravel"

[dependencies]
gravel-core = { path = "../gravel-core" }
gravel-frontend-fltk = { path = "../gravel-frontend-fltk" }
gravel-provider-calculator = { path = "../gravel-provider-calculator" }
gravel-provider-exec = { path = "../gravel-provider-exec" }
gravel-provider-kill = { path = "../gravel-provider-kill" }
gravel-provider-program = { path = "../gravel-provider-program" }
gravel-provider-system = { path = "../gravel-provider-system" }
gravel-provider-websearch = { path = "../gravel-provider-websearch" }

clap = { workspace = true, features = ["derive"] }
color-eyre.workspace = true
figment = { workspace = true, features = ["yaml"] }
hostname.workspace = true
lazy_static.workspace = true
log.workspace = true
shellexpand.workspace = true
single-instance.workspace = true
stderrlog.workspace = true

[target.'cfg(windows)'.dependencies]
winapi = { workspace = true, features = ["wincon"] }

[target.'cfg(unix)'.dependencies]
exec.workspace = true
